<resources>
    <string name="app_name">WeChat</string>
    <string name="my_account">My Account</string>
    <string name="about_us">About us</string>
    <string name="settings">Settings</string>
    <string name="call_logs">Call Logs</string>
    <string name="message_offline">Message Offline</string>
    <string name="message_online">Message Online</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_password">Forgot password</string>
    <string name="term_condition">I agree to the<b> TERMS AND CONDITIONS</b></string>
    <string name="title_phone_number">Phone Number</string>
    <string name="title_password">Password</string>
    <string name="open_navigation">OPEN</string>
    <string name="close_navigation">CLOSE</string>
    <string name="action_settings">Settings</string>
    <string name="attach_file">Attach File</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>
