<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/blue"
            android:gravity="bottom"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:padding="15dp"
                android:src="@drawable/icon_avatar_red" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:text="Tuan Ngo"
                android:textColor="@android:color/white"
                android:textSize="18dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:paddingLeft="20dp"
                android:singleLine="true"
                android:text="ngovantuan05101995@gmail.com"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:orientation="vertical"
        android:weightSum="7">

        <TableRow
            android:id="@+id/tr_message_online"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_state_tran">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/icon_message" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/message_online"
                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_call_logs"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_state_tran">

            <ImageView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/icon_phone_log" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/call_logs"

                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_setting"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_state_tran">

            <ImageView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/icon_settings" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/settings"

                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_about_us"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_state_tran">

            <ImageView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/icon_about_us" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/about_us"

                android:textSize="20dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_acount"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_state_tran">

            <ImageView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/icon_account" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="@string/my_account"
                android:textSize="22dp" />
        </TableRow>

        <TableRow
            android:id="@+id/tr_power"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_state_tran">

            <ImageView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="15dp"
                android:src="@drawable/icon_logout" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:gravity="center_vertical"
                android:text="Log out"
                android:textSize="20dp" />
        </TableRow>

    </LinearLayout>

</LinearLayout>